remove libgit2 usage and always use the alternative fallback that uses git command line client

reason: we had plentoria of crashs with threading vs. libgit2, even the init/shutdown per thread did crash in some versions

on the other side the fallback code is safe as out-of-process, even if git crashs, no kate crash

as the ls-files is anyways done in a worker thread, the slowdown isn't that important, better be safe than sorry

BUG: 361537